Fixed tab with help from Claude

--- a/_factory_tabs.html
+++ b/_factory_tabs.html
@@ -33,19 +33,23 @@
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false"><span class="pd-tabs-1-tri"></span>Itinerary
+                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Itinerary
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false"><span class="pd-tabs-1-tri"></span>Price
+                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Price
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false"><span class="pd-tabs-1-tri"></span>Includes
+                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Includes
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false"><span class="pd-tabs-1-tri"></span>Faq
+                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Faq
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
@@ -55,7 +59,7 @@
                             </ul>
                         </div>
                         <div class="tab-content" id="pills-tabContent">
-                            <div class="tab-pane fade show active" id="pills-overview" role="tabpanel" aria-labelledby="pills-overview-tab" data-pg-collapsed>
+                            <div class="tab-pane fade show active" id="pills-overview" role="tabpanel" aria-labelledby="pills-overview-tab">
                                 <div class="pd-tabs-1-style">
                                     <h3>Overview</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et molestie urna. Etiam at eros leo. Mauris tincidunt <b>mattis elementum</b>. Donec mattis lacinia massa, eget hendrerit velit porttitor sit amet. Morbi fringilla fringilla odio, sed dapibus augue condimentum cursus. Cras eget orci tortor. <b>Curabitur neque metus</b>, tempus sed commodo quis, rutrum sed ipsum. Nullam posuere lacus eget semper feugiat. Donec pharetra ac felis id convallis. Vivamus interdum accumsan libero, sit amet posuere turpis elementum et. <b>Sed rutrum</b> et velit consequat facilisis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed aliquet massa lacus, eu imperdiet massa accumsan nec.</p>
@@ -77,15 +81,14 @@
                                     <p><strong>- 8 buffet breakfasts<br>- 4 evening meals<br>- 1 winery lunch</strong></p>
                                 </div>                                 
                             </div>
-                            <div class="fade tab-pane" id="pills-itinerary" role="tabpanel" aria-labelledby="pills-itinerary-tab" data-pg-collapsed>
+                            <div class="fade tab-pane" id="pills-itinerary" role="tabpanel" aria-labelledby="pills-itinerary-tab">
                                 <div class="pd-tabs-1-panels-timeline">
                                     <div class="pd-tabs-1-timeline-outer">
                                         <div class="pd-tabs-1-timeline"></div>
                                     </div>
                                     <div class="pd-tabs-1-panels-outer">
                                         <article class="pd-tabs-1-panels-card">
-                                            <header>
-                                                <a href="#panel-1" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="panel-1" class="timelineBtn"><h3>Day 1: Arrival in Munich</h3></a>
+                                            <header><a href="#panel-1" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="panel-1" class="timelineBtn"><h3>Day 1: Arrival in Munich</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-1" aria-expanded="true" aria-controls="panel-1" class="timelineBtn">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -120,8 +123,7 @@
                                             </div>
                                         </article>
                                         <article class="pd-tabs-1-panels-card">
-                                            <header>
-                                                <a href="#panel-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-2" class="timelineBtn"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
+                                            <header><a href="#panel-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-2" class="timelineBtn"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-2" aria-expanded="true" aria-controls="panel-2" class="timelineBtn">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -155,8 +157,7 @@
                                             </div>
                                         </article>
                                         <article class="pd-tabs-1-panels-card">
-                                            <header>
-                                                <a href="#panel-3" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-3" class="timelineBtn"><h3>Day 3:&nbsp;Cras tincidunt dolor vitae quam suscipit</h3></a>
+                                            <header><a href="#panel-3" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-3" class="timelineBtn"><h3>Day 3:&nbsp;Cras tincidunt dolor vitae quam suscipit</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-3" aria-expanded="true" aria-controls="panel-3" class="timelineBtn">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -193,7 +194,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade" id="pills-price" role="tabpanel" aria-labelledby="pills-price-tab" data-pg-collapsed>
+                            <div class="tab-pane fade" id="pills-price" role="tabpanel" aria-labelledby="pills-price-tab">
                                 <div class="pd-tabs-1-style">
                                     <h3>Alpine Dream Pricing 2025</h3>
                                     <p><b>Adult: 18 &amp; over - EUR 2.800,-<br>Single Supplement: EUR 600,-</b></p>
@@ -204,7 +205,7 @@
                                     <p></p>
                                 </div>                                 
                             </div>
-                            <div class="tab-pane fade" id="pills-includes" role="tabpanel" aria-labelledby="pills-includes-tab" data-pg-collapsed>
+                            <div class="tab-pane fade" id="pills-includes" role="tabpanel" aria-labelledby="pills-includes-tab">
                                 <div class="pd-tabs-1-style">
                                     <h3>Bang for your Buck</h3>
                                     <ul>
@@ -212,7 +213,8 @@
                                         <li>Professional and experienced tour director</li>
                                         <li>Friendly and knowledgeable guide</li>
                                     </ul>
-                                    <p>&nbsp;</p><br>
+                                    <p>&nbsp;</p>
+                                    <br>
                                     <h3>These things are extra</h3>
                                     <ul class="pd-tabs-1-list-negative">
                                         <li>Door-to-door transportation in a premium coach</li>
@@ -221,7 +223,7 @@
                                     </ul>
                                 </div>                                 
                             </div>
-                            <div class="tab-pane fade" id="pills-faq" role="tabpanel" aria-labelledby="pills-faq-tab" data-pg-collapsed>
+                            <div class="tab-pane fade" id="pills-faq" role="tabpanel" aria-labelledby="pills-faq-tab">
                                 <div class="pd-tabs-1-accordion">
                                     <div class="accordion" id="faqs-accordion">
                                         <div class="accordion-item">
@@ -229,7 +231,8 @@
                                                     Is the trip guaranteed to operate?
 </button> </h2>
                                             <div id="collapse-1" class="accordion-collapse collapse show" aria-labelledby="heading-1" data-bs-parent="#faqs-accordion">
-                                                <div class="accordion-body"><strong><p>In semper volutpat erat et dapibus.</strong> Vestibulum sit amet lectus non purus volutpat venenatis vel et turpis. Pellentesque neque ipsum, laoreet ac enim at, sollicitudin euismod mauris. In condimentum sodales ante, ac accumsan enim dapibus sed. Proin in purus condimentum, volutpat massa eget, egestas turpis. Integer vitae elit ut arcu pretium tristique aliquam ut nunc. 
+                                                <div class="accordion-body">
+                                                    <strong><p>In semper volutpat erat et dapibus.</strong> Vestibulum sit amet lectus non purus volutpat venenatis vel et turpis. Pellentesque neque ipsum, laoreet ac enim at, sollicitudin euismod mauris. In condimentum sodales ante, ac accumsan enim dapibus sed. Proin in purus condimentum, volutpat massa eget, egestas turpis. Integer vitae elit ut arcu pretium tristique aliquam ut nunc. 
                                                 </div>
                                             </div>
                                             <div class="accordion-item">
@@ -255,11 +258,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="tab-pane fade" id="pills-extensions" role="tabpanel" aria-labelledby="pills-contact-tab"></div>
                             </div>
                             <div class="tab-pane fade" id="pills-extensions" role="tabpanel" aria-labelledby="pills-extensions-tab">
-                                <div>
-                                    <p>Extensions Tab</p>
+                                <div class="pd-tabs-1-style">
+                                    <h3>Extensions</h3>
+                                    <p>Here you can add content for the Extensions tab.</p>
+                                    <!-- Add more content for the Extensions tab as needed -->
                                 </div>
                             </div>
                         </div>
