Added in text-2

--- a/_factory_tabs.html
+++ b/_factory_tabs.html
@@ -33,27 +33,24 @@
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Itinerary
+                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false"><span class="pd-tabs-1-tri"></span>Itinerary
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Price
+                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false"><span class="pd-tabs-1-tri"></span>Price
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Includes
+                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false"><span class="pd-tabs-1-tri"></span>Includes
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false">
-                                        <span class="pd-tabs-1-tri"></span>Faq
+                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false"><span class="pd-tabs-1-tri"></span>Faq
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false"><span class="pd-tabs-1-tri"></span>Extensions
+                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Extensions
                                     </button>
                                 </li>
                             </ul>
@@ -88,7 +85,8 @@
                                     </div>
                                     <div class="pd-tabs-1-panels-outer">
                                         <article class="pd-tabs-1-panels-card">
-                                            <header><a href="#panel-1" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="panel-1" class="timelineBtn"><h3>Day 1: Arrival in Munich</h3></a>
+                                            <header>
+                                                <a href="#panel-1" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="panel-1" class="timelineBtn"><h3>Day 1: Arrival in Munich</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-1" aria-expanded="true" aria-controls="panel-1" class="timelineBtn">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -123,7 +121,8 @@
                                             </div>
                                         </article>
                                         <article class="pd-tabs-1-panels-card">
-                                            <header><a href="#panel-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-2" class="timelineBtn"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
+                                            <header>
+                                                <a href="#panel-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-2" class="timelineBtn"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-2" aria-expanded="true" aria-controls="panel-2" class="timelineBtn">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -157,7 +156,8 @@
                                             </div>
                                         </article>
                                         <article class="pd-tabs-1-panels-card">
-                                            <header><a href="#panel-3" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-3" class="timelineBtn"><h3>Day 3:&nbsp;Cras tincidunt dolor vitae quam suscipit</h3></a>
+                                            <header>
+                                                <a href="#panel-3" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-3" class="timelineBtn"><h3>Day 3:&nbsp;Cras tincidunt dolor vitae quam suscipit</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-3" aria-expanded="true" aria-controls="panel-3" class="timelineBtn">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -213,8 +213,7 @@
                                         <li>Professional and experienced tour director</li>
                                         <li>Friendly and knowledgeable guide</li>
                                     </ul>
-                                    <p>&nbsp;</p>
-                                    <br>
+                                    <p>&nbsp;</p><br>
                                     <h3>These things are extra</h3>
                                     <ul class="pd-tabs-1-list-negative">
                                         <li>Door-to-door transportation in a premium coach</li>
@@ -231,8 +230,7 @@
                                                     Is the trip guaranteed to operate?
 </button> </h2>
                                             <div id="collapse-1" class="accordion-collapse collapse show" aria-labelledby="heading-1" data-bs-parent="#faqs-accordion">
-                                                <div class="accordion-body">
-                                                    <strong><p>In semper volutpat erat et dapibus.</strong> Vestibulum sit amet lectus non purus volutpat venenatis vel et turpis. Pellentesque neque ipsum, laoreet ac enim at, sollicitudin euismod mauris. In condimentum sodales ante, ac accumsan enim dapibus sed. Proin in purus condimentum, volutpat massa eget, egestas turpis. Integer vitae elit ut arcu pretium tristique aliquam ut nunc. 
+                                                <div class="accordion-body"><strong><p>In semper volutpat erat et dapibus.</strong> Vestibulum sit amet lectus non purus volutpat venenatis vel et turpis. Pellentesque neque ipsum, laoreet ac enim at, sollicitudin euismod mauris. In condimentum sodales ante, ac accumsan enim dapibus sed. Proin in purus condimentum, volutpat massa eget, egestas turpis. Integer vitae elit ut arcu pretium tristique aliquam ut nunc. 
                                                 </div>
                                             </div>
                                             <div class="accordion-item">
@@ -262,7 +260,7 @@
                             <div class="tab-pane fade" id="pills-extensions" role="tabpanel" aria-labelledby="pills-extensions-tab">
                                 <div class="pd-tabs-1-style">
                                     <h3>Extensions</h3>
-                                    <p>Here you can add content for the Extensions tab.</p>
+                                    <p>Wysiswyg - as per Overview tab</p>
                                     <!-- Add more content for the Extensions tab as needed -->
                                 </div>
                             </div>
