--- a/_factory_text.html
+++ b/_factory_text.html
@@ -85,6 +85,28 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-text-2</p>
             </div>
         </section>
+        <section class="pb-3 pd-text-2 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12"> 
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        <p>Ut convallis interdum ligula et porttitor. Etiam rutrum metus non quam feugiat facilisis. Vestibulum vestibulum ex vel augue egestas, nec imperdiet orci fringilla. Etiam sollicitudin ultricies velit congue pharetra. Phasellus dictum vestibulum elit sed semper. Ut vestibulum sit amet nisi ultrices congue. Cras sagittis blandit ex, quis congue felis viverra a. Nam dictum facilisis urna, et congue est facilisis et. Suspendisse congue, sapien sit amet pharetra tempor, tellus elit dictum urna, quis iaculis libero ex at augue.</p>
+                        <p>Integer suscipit diam libero, non aliquet dui feugiat vitae. Ut tristique, elit id ullamcorper pellentesque, velit massa iaculis odio, vel volutpat sapien massa et ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lectus justo, lobortis et eros sed, tincidunt faucibus ex. Sed ac leo viverra, facilisis purus at, imperdiet augue. Fusce est felis, ullamcorper id pulvinar vel, consectetur vel eros. Aliquam in bibendum lacus. Curabitur feugiat ipsum at risus rhoncus, at scelerisque dui scelerisque. Donec fringilla turpis vitae quam auctor, eu mollis velit consequat. Etiam posuere tristique justo. Vivamus eleifend sit amet ex sit amet tincidunt. Sed nec dui id ligula posuere accumsan luctus vitae nulla. Nulla justo lacus, interdum vitae odio et, viverra pretium leo. Curabitur malesuada urna sed turpis dictum tempor.</p> 
+                    </div>
+                </div>
+                <div class="pb-3 pt-3 row">
+                    <div class="col-lg-8 text-center"><a href="#" name="anchor" class="pd-text-2-call-to-action">Next Tour Dates: 10. - 18. August 2024</a> 
+                    </div>
+                    <div class="col-lg-4 text-center"><a href="#" name="anchor" class="btn btn-primary"><span>Click here to<br></span>Book this Tour!</a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-text-3</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
