--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -676,6 +676,82 @@ Focus on retaining candidates and clients.</strong></p>
                 </div>
             </div>
         </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-15</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;"></p>
+            </div>
+        </section>
+        <section class="d-flex flex-column justify-content-center pb-5 pd-hero-15 pt-5">
+            <script>
+                function imageLoadedListener15(e) {
+                    const heroImage15 = document.querySelector(".pd-hero-15-img");
+                    heroImage15.classList.add("pd-hero-15-img-loaded");
+                }
+            </script>
+            <picture>
+                <source srcset="/images/uploads/hero-olympia-1800w1200h_result.webp 1800w, 
+                                /images/uploads/hero-olympia-820w1460h_result.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
+                <img srcset="/images/uploads/hero-olympia-1800w1200h.jpg 1800w,
+                            /images/uploads/hero-olympia-820w1460h.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/ruzicka/hero-olympia-820w1460h.jpg" class="pd-hero-15-img" onload="imageLoadedListener15()" loading="lazy" alt="image of olympia wa"/>
+            </picture>
+            <div class="pd-hero-15-overlay"></div>
+            <div class="container" style="position: relative;">
+                <div class="row">
+                    <div class="col-12 col-lg-8">
+                        <div class="mb-3 mt-3">
+                            <h1>CPA Olympia WA</h1>
+                            <p class="pd-hero-15-headline"><strong>Full-service accounting and advisory services</strong></p>
+                            <p class="pd-hero-15-subheadline">Donec accumsan fringilla purus sit amet semper. Praesent iaculis nibh tortor, rhoncus efficitur ipsum viverra ut. Quisque elit ex, tincidunt nec cursus a, malesuada vitae orci.</p>
+                            <footer class=" pt-3">
+                                <a href="#" name="anchor" class="m-1 pd-hero-15-btn-light"><span class="me-2"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                            <path d="M555.38-576.31v-37.23q32.24-16.31 69.04-24.46 36.81-8.15 75.58-8.15 22.15 0 42.54 2.84 20.38 2.85 42.08 8.08v36.31q-20.93-6.7-40.81-9.27-19.89-2.58-43.81-2.58-38.77 0-75.69 8.73-36.93 8.73-68.93 25.73Zm0 218.46v-38.77q30.7-16.3 68.66-24.46 37.96-8.15 75.96-8.15 22.15 0 42.54 2.85 20.38 2.84 42.08 8.07V-382q-20.93-6.69-40.81-9.27-19.89-2.58-43.81-2.58-38.77 0-75.69 9.39-36.93 9.38-68.93 26.61Zm0-108.46v-38.77q32.24-16.3 69.04-24.46 36.81-8.15 75.58-8.15 22.15 0 42.54 2.84 20.38 2.85 42.08 8.08v36.31q-20.93-6.69-40.81-9.27-19.89-2.58-43.81-2.58-38.77 0-75.69 9.5-36.93 9.5-68.93 26.5ZM260-318.46q52.38 0 101.88 12.04 49.5 12.04 98.12 39.19v-392.46q-43.31-30.93-95.46-46.39-52.16-15.46-104.54-15.46-36 0-63.04 4.31t-60.04 16q-9.23 3.08-13.07 8.85-3.85 5.76-3.85 12.69v360.61q0 10.77 7.69 15.77t16.93 1.16q21.92-7.39 50.65-11.85 28.73-4.46 64.73-4.46Zm240 51.23q48.62-27.15 98.12-39.19 49.5-12.04 101.88-12.04 36 0 64.73 4.46 28.73 4.46 50.65 11.85 9.24 3.84 16.93-1.16 7.69-5 7.69-15.77v-360.61q0-6.93-3.85-12.31-3.84-5.38-13.07-9.23-33-11.69-60.04-16-27.04-4.31-63.04-4.31-52.38 0-104.54 15.46-52.15 15.46-95.46 46.39v392.46Zm-20 58q-48.77-33.39-104.77-51.31-56-17.92-115.23-17.92-31.23 0-61.35 5.23Q168.54-268 140-256.46q-21.77 8.69-40.88-5.23Q80-275.61 80-300.15v-386.62q0-14.85 7.81-27.54T109.69-732q35.23-15.54 73.31-22.54 38.08-7 77-7 58.77 0 114.65 16.92 55.89 16.93 105.35 49.24 49.46-32.31 105.35-49.24 55.88-16.92 114.65-16.92 38.92 0 77 7T850.31-732q14.07 5 21.88 17.69 7.81 12.69 7.81 27.54v386.62q0 24.54-20.65 37.69-20.66 13.15-43.97 4.46-27.76-10.77-56.73-15.62-28.96-4.84-58.65-4.84-59.23 0-115.23 17.92-56 17.92-104.77 51.31ZM290-499.38Z"/>
+                                        </svg></span>Bookkeeping</a>
+                                <a href="#" name="anchor" class="m-1 pd-hero-15-btn-light"><span class="me-2"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                            <path d="M324.67-298.46q13.1 0 21.91-8.86 8.8-8.86 8.8-21.96 0-13.1-8.86-21.91T324.56-360q-13.1 0-21.91 8.86-8.8 8.86-8.8 21.96 0 13.1 8.86 21.91t21.96 8.81Zm0-150.77q13.1 0 21.91-8.86 8.8-8.86 8.8-21.96 0-13.1-8.86-21.91t-21.96-8.81q-13.1 0-21.91 8.86-8.8 8.86-8.8 21.96 0 13.1 8.86 21.91t21.96 8.81Zm0-150.77q13.1 0 21.91-8.86 8.8-8.86 8.8-21.96 0-13.1-8.86-21.91t-21.96-8.81q-13.1 0-21.91 8.86-8.8 8.86-8.8 21.96 0 13.1 8.86 21.91t21.96 8.81Zm123.02 290.77h215.39v-40H447.69v40Zm0-150.77h215.39v-40H447.69v40Zm0-150.77h215.39v-40H447.69v40ZM224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h510.76q27.62 0 46.12 18.5Q800-763 800-735.38v510.76q0 27.62-18.5 46.12Q763-160 735.38-160H224.62Zm0-40h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-510.76q0-9.24-7.69-16.93-7.69-7.69-16.93-7.69H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v510.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69ZM200-760v560-560Z"/>
+                                        </svg></span>Tax Accounting</a>
+                            </footer>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 pe-0 ps-0" style="position: relative;">
+                        <div class="p-2 pd-hero-15-overlap">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="align-items-lg-center align-items-start col-lg-3 d-flex flex-column justify-content-center pd-hero-15-overlap-start">
+                                        <img src="images/uploads/aicpa-member.png" alt="icon of aicpa member" loading="lazy" class="mb-4 mt-4 "> 
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-4 mt-4 pd-hero-15-content-inner ps-4">
+                                            <header class="align-items-center d-flex flex-row flex-wrap justify-content-start">
+                                                <picture>
+                                                    <source srcset="/images/uploads/avatar-mark-ruzicka-large_result.webp" type="image/webp">
+                                                    <img src="/images/uploads/avatar-mark-ruzicka-large.jpeg" alt="image of centralia" loading="lazy" class="me-3">
+                                                </picture>
+                                                <h2>Welcome</h2>
+                                            </header>
+                                            <div class="pd-hero-15-content-inner-body">
+                                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                                <p><strong>Mark Ruzicka, CPA</strong></p>
+                                            </div>
+                                        </div>                                         
+                                    </div>
+                                    <div class="align-items-md-center align-items-start col-lg-3 d-flex flex-column justify-content-center"><a href="#" name="anchor" class="mb-4 mt-4 pd-btn"><span class="me-2"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                                    <path d="M460-140v-315.92q-56.31 0-107.62-21.04-51.3-21.04-90.92-60.66-39.61-39.61-60.15-91.38-20.54-51.77-20.54-107.92v-40h40q55.07 0 106.63 21.49 51.57 21.49 90.91 60.97 31.77 31.77 51.5 72.23 19.73 40.46 26.11 85.54 8.85-17 19.85-31.96 11-14.97 24.92-28.89 39.51-39.47 91.32-60.97Q683.81-680 740-680h40v40q0 56.22-21.52 108.04-21.51 51.83-61.04 91.36-39.52 39.52-90.32 60.06Q556.31-360 500-360v220h-40Zm.77-356.92q0-48-18.5-91.5t-52.5-77.5q-34-34-77.5-52.5t-91.5-18.5q0 48 18 92t52 78q34 34 78 52t92 18ZM500-400q48 0 91.5-18t77.5-52q34-34 52.5-78t18.5-92q-48 0-92 18.5T570-569q-34 34-52 77.5T500-400Zm0 0Zm-39.23-96.92Z"/>
+                                                </svg></span>Get Started</a> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="pb-5 pt-5"></section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
