--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -860,6 +860,94 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-13</p>
             </div>
         </section>
+        <section class="mt-5 pd-cards-13 text-white" style="position: relative;">
+            <picture>
+                <source srcset="/images/uploads/hero-grow-1800w1200h_result.webp 1800w, 
+                                /images/uploads/hero-grow-820w1460h_result.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
+                <img srcset="/images/uploads/hero-grow-1800w1200h.jpg 1800w,
+                            /images/uploads/hero-grow-820w1460h.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-grow-820w1460h.jpg" class="pd-cards-13-image" loading="lazy" alt="image of flora and fauna in Olympia wa"/>
+            </picture>
+            <div class="pd-cards-13-overlay"></div>
+            <div class="pd-cards-13-mask">
+                <div class="pd-cards-13-circle-outer">
+                    <div class="pd-cards-13-circle-inner">
+                        <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                            <path d="M480.14-490.77q26.71 0 45.59-19.02 18.89-19.02 18.89-45.73 0-26.71-19.03-45.6Q506.57-620 479.86-620q-26.71 0-45.59 19.02-18.89 19.02-18.89 45.73 0 26.71 19.03 45.6 19.02 18.88 45.73 18.88ZM480-172.92q112.77-98.16 178.31-199.66t65.54-175.57q0-109.77-69.5-181.2-69.5-71.42-174.35-71.42t-174.35 71.42q-69.5 71.43-69.5 181.2 0 74.07 65.54 175.57T480-172.92Zm0 53.69Q339-243.92 267.58-351.81q-71.43-107.88-71.43-196.34 0-126.93 82.66-209.39Q361.46-840 480-840q118.54 0 201.19 82.46 82.66 82.46 82.66 209.39 0 88.46-71.43 196.34Q621-243.92 480-119.23Zm0-436.15Z"/>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="container" style="position: relative;">
+                <div class="pb-5 row">
+                    <div class="col-lg-9">
+                        <h2 class="pd-intro-heading-sm">Our Locations</h2> 
+                        <p class="pd-headline">Services across Washington</p>
+                        <div class="pd-border-left">
+                            <p class="pd-subHeadline">Donec eleifend tristique leo eget sollicitudin. Aliquam lobortis nisi a augue scelerisque aliquet. Etiam consectetur sapien id rutrum fermentum&nbsp;Cras vel ligula sed enim interdum sodales vitae at velit. Nunc nisl nibh, porta sit amet dictum non, tincidunt non sem.&nbsp;</p>
+                        </div>                         
+                    </div>
+                </div>
+                <div class="pt-3 row">
+                    <div class="col-md-6 pb-5"><a href="#" class="pd-cards-13-card-outer"> <div class="pd-cards-13-card-inner">
+                                <div class="pd-cards-13-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/location-centralia-300wx300h_result.webp" type="image/webp">
+                                        <img src="/images/uploads/location-centralia-300wx300h.jpg" alt="image of centralia" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture>
+                                </div>
+                                <div class="pd-cards-13-card-body">
+                                    <h3>Centralia</h3>
+                                    <p>View Centralia</p>
+                                </div>
+                            </div> </a> 
+                    </div>
+                    <div class="col-md-6 pb-5"><a href="#" class="pd-cards-13-card-outer"> <div class="pd-cards-13-card-inner">
+                                <div class="pd-cards-13-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/location-lacey-300wx300h_result.webp" type="image/webp">
+                                        <img src="/images/uploads/location-lacey-300wx300h.jpg" alt="image of lacey wa" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture>
+                                </div>
+                                <div class="pd-cards-13-card-body">
+                                    <h3>Lacey</h3>
+                                    <p>View Lacey</p>
+                                </div>
+                            </div> </a> 
+                    </div>
+                    <div class="col-md-6 pb-5"><a href="#" class="pd-cards-13-card-outer"> <div class="pd-cards-13-card-inner">
+                                <div class="pd-cards-13-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/location-tacoma-city-300wx300h_result.webp" type="image/webp">
+                                        <img src="/images/uploads/location-tacoma-city-300wx300h.jpg" alt="image of tacoma city wa" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture>
+                                </div>
+                                <div class="pd-cards-13-card-body">
+                                    <h3>Tacoma City</h3>
+                                    <p>View Tacoma City</p>
+                                </div>
+                            </div> </a> 
+                    </div>
+                    <div class="col-md-6 pb-5"><a href="#" class="pd-cards-13-card-outer"> <div class="pd-cards-13-card-inner">
+                                <div class="pd-cards-13-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/location-tumwater-300wx300h_result.webp" type="image/webp">
+                                        <img src="/images/uploads/location-tumwater-300wx300h.jpg" alt="image of tumwater wa" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture>
+                                </div>
+                                <div class="pd-cards-13-card-body">
+                                    <h3>Tumwater</h3>
+                                    <p>View Tumwater</p>
+                                </div>
+                            </div> </a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-14</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
