--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -320,8 +320,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -512,8 +511,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -541,8 +539,7 @@
                                 <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-14-img-thumbnail pd-section-14-img-thumbnail-right" loading="lazy"/>
                             </picture>
                         </div>
-                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p>
-                        <a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
+                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p><a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
                     </header>
                     <div class="col-lg-6">
                         <div class="row">
@@ -608,8 +605,7 @@
                         <h3 class="pd-section-15-subHeadlines">Game Development</h3> 
                         <p class="pd-section-15-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. <a href="#">Read game developer service</a></p> 
                     </article>
-                    <footer class="col-12 pt-2 text-center">
-                        <a href="#" name="anchor" class="pd-section-15-btn">Contact Us</a> 
+                    <footer class="col-12 pt-2 text-center"><a href="#" name="anchor" class="pd-section-15-btn">Contact Us</a> 
                     </footer>
                 </div>
             </div>
@@ -655,7 +651,8 @@
                         <h3 class="pd-section-16-subHeadlines">Game Development</h3> 
                         <p class="pd-section-16-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. <a href="#">Read game developer service</a></p> 
                     </article>
-                    <footer class="col-12 pt-2 text-center"><a href="#" name="anchor" class="pd-section-16-btn">Contact Us</a> 
+                    <footer class="col-12 pt-2 text-center">
+                        <a href="#" name="anchor" class="pd-section-16-btn">Contact Us</a> 
                     </footer>
                 </div>
             </div>
@@ -725,8 +722,7 @@
                             </div>
                         </div>                         
                     </div>
-                    <div class="col-12 pt-4 text-center">
-                        <a target="_blank" href="#" name="anchor" class="pd-section-17-btn">Visit the website</a> 
+                    <div class="col-12 pt-4 text-center"><a target="_blank" href="#" name="anchor" class="pd-section-17-btn">Visit the website</a> 
                     </div>
                 </div>
             </div>
@@ -734,6 +730,47 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-18</p>
+            </div>
+        </section>
+        <section class="pd-section-18">
+            <div class="pd-section-18-mask">
+                <div class="pd-section-18-circle-outer">
+                    <div class="pd-section-18-circle-inner">
+                        <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                            <path d="M40-256.92v-34.54q0-36.85 39.38-61.16 39.39-24.3 101.39-24.3 9.15 0 19.61.88 10.47.89 22.24 2.89-9.39 16.38-13.7 33.61-4.3 17.23-4.3 34.54v48.08H40Zm240 0v-45q0-24.18 14.04-44.21 14.04-20.02 41.42-34.64 27.39-14.61 63.81-21.92 36.42-7.31 80.42-7.31 44.85 0 81.27 7.31 36.42 7.31 63.81 21.92 27.38 14.62 41.31 34.64Q680-326.1 680-301.92v45H280Zm475.38 0v-47.85q0-19.14-4.19-36.07t-12.57-32.31q12.53-2 22.5-2.89 9.96-.88 18.88-.88 62 0 101 24.19t39 61.27v34.54H755.38Zm-434.23-40h317.93v-8.46q-2.31-28.47-46.66-46.54Q548.08-370 480-370t-112.42 18.08q-44.35 18.07-46.43 46.54v8.46Zm-140.59-117.7q-23.56 0-40.14-16.72-16.57-16.72-16.57-40.2 0-23.23 16.72-39.69 16.72-16.46 40.2-16.46 23.23 0 40.08 16.46 16.84 16.46 16.84 39.92 0 22.77-16.42 39.73-16.43 16.96-40.71 16.96Zm599.44 0q-23 0-39.96-16.96t-16.96-39.73q0-23.46 16.96-39.92t40.11-16.46q23.85 0 40.31 16.46t16.46 39.69q0 23.48-16.36 40.2-16.37 16.72-40.56 16.72ZM480.27-440q-36.42 0-62.19-25.58-25.77-25.57-25.77-62.11 0-37.27 25.57-62.48 25.58-25.22 62.12-25.22 37.27 0 62.48 25.14 25.21 25.13 25.21 62.29 0 36.42-25.13 62.19Q517.43-440 480.27-440Zm.11-40q19.7 0 33.5-14.19 13.81-14.2 13.81-33.89t-13.71-33.5q-13.71-13.81-33.98-13.81-19.31 0-33.5 13.72-14.19 13.71-14.19 33.98 0 19.3 14.19 33.5Q460.69-480 480.38-480Zm-.15 183.08ZM480-527.69Z"/>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <article class="col-md-6 d-flex flex-column justify-content-center">
+                        <div class="pd-section-18-image-outer">
+                            <picture>
+                                <source srcset="/images/uploads/avatar-mark-ruzicka-large_result.webp" type="image/webp">
+                                <img src="/images/uploads/avatar-mark-ruzicka-large.jpeg" alt="image of centralia" loading="lazy" class="pd-cards-posts-1-image">
+                            </picture>
+                        </div>                         
+                    </article>
+                    <article class="align-items-start col-md-6 d-flex flex-column justify-content-center p-4 text-primary">
+                        <header>
+                            <h2 class="pd-intro-heading-sm">About</h2>
+                            <div class="pd-headline">
+                                <p>About Mark Ruzicka, CPA</p>
+                            </div>
+                        </header>                         
+                        <div class="mb-4 pd-border-left pd-subHeadline">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div><a href="#" name="anchor" class="pd-btn pd-inverted"><span class="me-2"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                    <path d="M40-256.92v-34.54q0-36.85 39.38-61.16 39.39-24.3 101.39-24.3 9.15 0 19.61.88 10.47.89 22.24 2.89-9.39 16.38-13.7 33.61-4.3 17.23-4.3 34.54v48.08H40Zm240 0v-45q0-24.18 14.04-44.21 14.04-20.02 41.42-34.64 27.39-14.61 63.81-21.92 36.42-7.31 80.42-7.31 44.85 0 81.27 7.31 36.42 7.31 63.81 21.92 27.38 14.62 41.31 34.64Q680-326.1 680-301.92v45H280Zm475.38 0v-47.85q0-19.14-4.19-36.07t-12.57-32.31q12.53-2 22.5-2.89 9.96-.88 18.88-.88 62 0 101 24.19t39 61.27v34.54H755.38Zm-434.23-40h317.93v-8.46q-2.31-28.47-46.66-46.54Q548.08-370 480-370t-112.42 18.08q-44.35 18.07-46.43 46.54v8.46Zm-140.59-117.7q-23.56 0-40.14-16.72-16.57-16.72-16.57-40.2 0-23.23 16.72-39.69 16.72-16.46 40.2-16.46 23.23 0 40.08 16.46 16.84 16.46 16.84 39.92 0 22.77-16.42 39.73-16.43 16.96-40.71 16.96Zm599.44 0q-23 0-39.96-16.96t-16.96-39.73q0-23.46 16.96-39.92t40.11-16.46q23.85 0 40.31 16.46t16.46 39.69q0 23.48-16.36 40.2-16.37 16.72-40.56 16.72ZM480.27-440q-36.42 0-62.19-25.58-25.77-25.57-25.77-62.11 0-37.27 25.57-62.48 25.58-25.22 62.12-25.22 37.27 0 62.48 25.14 25.21 25.13 25.21 62.29 0 36.42-25.13 62.19Q517.43-440 480.27-440Zm.11-40q19.7 0 33.5-14.19 13.81-14.2 13.81-33.89t-13.71-33.5q-13.71-13.81-33.98-13.81-19.31 0-33.5 13.72-14.19 13.71-14.19 33.98 0 19.3 14.19 33.5Q460.69-480 480.38-480Zm-.15 183.08ZM480-527.69Z"/>
+                                </svg></span>Read About</a> 
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-19</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
