Added in calednly pd-cta-7

--- a/_factory_call_to_actions.html
+++ b/_factory_call_to_actions.html
@@ -158,10 +158,103 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-6</p>
             </div>
         </section>
+        <section class="pb-5 pd-CTA-6 pt-5">
+            <div class="pd-CTA-6-mask pd-left pd-right">
+                <div class="pd-CTA-6-circle-outer">
+                    <div class="pd-CTA-6-circle-inner">
+                        <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                            <path d="M260-420h440v-40H260v40Zm0-120h440v-40H260v40Zm0-120h440v-40H260v40Zm580 503.08L716.92-280h-532.3q-27.62 0-46.12-18.5Q120-317 120-344.62v-430.76q0-27.62 18.5-46.12Q157-840 184.62-840h590.76q27.62 0 46.12 18.5Q840-803 840-775.38v618.46ZM184.62-320H734l66 65.77v-521.15q0-9.24-7.69-16.93-7.69-7.69-16.93-7.69H184.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v430.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69ZM160-320v-480 480Z"/>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 pt-5 pt-lg-0">
+                        <div class="pb-3 pb-lg-0 pd-CTA-6-image-outer">
+                            <img src="images/uploads/aicpa-member.png" alt="icon of aicpa member" loading="lazy" class="mb-4 mt-4 ">
+                        </div>                         
+                    </div>
+                    <div class="col-lg-9 pd-border-left ps-4">
+                        <div>
+                            <h2 class="pd-intro-heading-sm">Contact Us</h2>
+                            <p class="pd-headline">Trusted guidance. Transparent solutions. <br>Together in success.</p>
+                            <p class="pd-subHeadline">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.&nbsp;</p>
+                            <div class="pb-5">
+                                <div class="pd-CTA-6-links-outer"><a href="#" name="anchor">Olympia</a><a href="#" name="anchor">Tumwater</a><a href="#" name="anchor">Centralia</a><a href="#" name="anchor">Lacey</a><a href="#" name="anchor">Tacoma City</a>
+                                </div>
+                            </div>
+                        </div>
+                        <footer><a href="#" name="anchor" class="pd-btn pd-inverted"><span class="me-2"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="18" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                        <path d="M460-140v-315.92q-56.31 0-107.62-21.04-51.3-21.04-90.92-60.66-39.61-39.61-60.15-91.38-20.54-51.77-20.54-107.92v-40h40q55.07 0 106.63 21.49 51.57 21.49 90.91 60.97 31.77 31.77 51.5 72.23 19.73 40.46 26.11 85.54 8.85-17 19.85-31.96 11-14.97 24.92-28.89 39.51-39.47 91.32-60.97Q683.81-680 740-680h40v40q0 56.22-21.52 108.04-21.51 51.83-61.04 91.36-39.52 39.52-90.32 60.06Q556.31-360 500-360v220h-40Zm.77-356.92q0-48-18.5-91.5t-52.5-77.5q-34-34-77.5-52.5t-91.5-18.5q0 48 18 92t52 78q34 34 78 52t92 18ZM500-400q48 0 91.5-18t77.5-52q34-34 52.5-78t18.5-92q-48 0-92 18.5T570-569q-34 34-52 77.5T500-400Zm0 0Zm-39.23-96.92Z"/>
+                                    </svg></span>Get Started</a>
+                        </footer>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-7</p>
+            </div>
+        </section>
+        <section class="pd-CTA-7">
+            <div class="pd-CTA-7-mask pd-right">
+                <div class="pd-CTA-7-circle-outer">
+                    <div class="pd-CTA-7-circle-inner">
+                        <svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                            <path d="M224.62-120q-27.62 0-46.12-18.5Q160-157 160-184.62v-510.76q0-27.62 18.5-46.12Q197-760 224.62-760h70.76v-89.23h43.08V-760h286.16v-89.23h40V-760h70.76q27.62 0 46.12 18.5Q800-723 800-695.38v510.76q0 27.62-18.5 46.12Q763-120 735.38-120H224.62Zm0-40h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-350.76H200v350.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69ZM200-575.39h560v-119.99q0-9.24-7.69-16.93-7.69-7.69-16.93-7.69H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v119.99Zm0 0V-720-575.39Zm280 181.54q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.57 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.57 0 12.39-9.19 21.58-9.2 9.19-21.58 9.19Zm-160 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.57 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.57 0 12.39-9.19 21.58-9.2 9.19-21.58 9.19Zm320 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.57 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.57 0 12.39-9.19 21.58-9.2 9.19-21.58 9.19ZM480-240q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.2 9.19 21.58 0 12.39-9.19 21.58Q492.38-240 480-240Zm-160 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.2 9.19 21.58 0 12.39-9.19 21.58Q332.38-240 320-240Zm320 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.2 9.19 21.58 0 12.39-9.19 21.58Q652.38-240 640-240Z"/>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="align-items-lg-end align-items-start col-lg-2 d-flex flex-column justify-content-center">
+                        <picture>
+                            <source srcset="/images/uploads/avatar-mark-ruzicka-large_result.webp" type="image/webp">
+                            <img src="/images/uploads/avatar-mark-ruzicka-large.jpeg" alt="image of centralia" loading="lazy" class="mb-4 mb-lg-0 pd-CTA-7-img">
+                        </picture>                         
+                    </div>
+                    <div class="col-lg-6">
+                        <h2 class="pd-intro-heading-sm">Schedule a Call</h2>
+                        <div class="pd-headline">
+                            <p>Schedule a call with Mark</p>
+                        </div>
+                        <div class="mb-5 pd-border-left pd-subHeadline">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </div>
+                    <div class="align-items-center col-lg-4 d-flex flex-row justify-content-start">
+                        <a href="#" name="anchor" class="pd-btn pd-inverted" id="calendly-button"><span class="me-2"><svg class="pd-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+                                    <path d="M224.62-120q-27.62 0-46.12-18.5Q160-157 160-184.62v-510.76q0-27.62 18.5-46.12Q197-760 224.62-760h70.76v-89.23h43.08V-760h286.16v-89.23h40V-760h70.76q27.62 0 46.12 18.5Q800-723 800-695.38v510.76q0 27.62-18.5 46.12Q763-120 735.38-120H224.62Zm0-40h510.76q9.24 0 16.93-7.69 7.69-7.69 7.69-16.93v-350.76H200v350.76q0 9.24 7.69 16.93 7.69 7.69 16.93 7.69ZM200-575.39h560v-119.99q0-9.24-7.69-16.93-7.69-7.69-16.93-7.69H224.62q-9.24 0-16.93 7.69-7.69 7.69-7.69 16.93v119.99Zm0 0V-720-575.39Zm280 181.54q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.57 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.57 0 12.39-9.19 21.58-9.2 9.19-21.58 9.19Zm-160 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.57 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.57 0 12.39-9.19 21.58-9.2 9.19-21.58 9.19Zm320 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.57 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.19 9.19 21.57 0 12.39-9.19 21.58-9.2 9.19-21.58 9.19ZM480-240q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.2 9.19 21.58 0 12.39-9.19 21.58Q492.38-240 480-240Zm-160 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.2 9.19 21.58 0 12.39-9.19 21.58Q332.38-240 320-240Zm320 0q-12.38 0-21.58-9.19-9.19-9.19-9.19-21.58 0-12.38 9.19-21.58 9.2-9.19 21.58-9.19 12.38 0 21.58 9.19 9.19 9.2 9.19 21.58 0 12.39-9.19 21.58Q652.38-240 640-240Z"/>
+                                </svg></span>Schedule a Call</a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pd-modal-1" id="calendly-modal">
+            <div class="pd-modal-1-background" id="modal-1-background"></div>
+            <div class="pd-modal-1-content-outer">
+                <div class="pd-modal-1-content-inner">
+                    <button class="pd-modal-1-close-btn" id="modal-close-btn">
+                        <img src="images/design-assets/icon-close-dark.svg" alt="close icon" width="32" height="32">
+                    </button>
+                    <div id="calendly-wrapper">
+</div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-8</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="assets/js/functions-modal-calendly.js"></script>
     </body>
 </html>
