Added in more cards

--- a/_factory_footers.html
+++ b/_factory_footers.html
@@ -152,7 +152,7 @@ UK</p>
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-footer-3</p>
             </div>
         </section>
-        <footer class="pb-5 pd-footer-3 pt-5 text-white">
+        <footer class="pb-4 pd-footer-3 pt-5 text-white">
             <div class="container">
                 <div class="pb-4 row">
                     <div class="col-12 text-center text-md-start">
@@ -244,7 +244,8 @@ UK</p>
                         <p>2025&copy; Fort Marketing. All Rights Reserved.</p>                          
                     </div>
                     <div class="col-lg-6 text-center text-lg-end">
-                        <a href="#" class="pd-footer-link">Privacy Policy</a>                          
+                        <a href="#" class="me-2  pd-footer-link">Privacy Policy</a>
+                        <a href="#" class="pd-footer-link">Terms of Use</a>                          
                     </div>
                 </div>
             </div>
